--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_theorem.sty
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_theorem.sty
@@ -334,6 +334,8 @@
 
 \newtheorem{*beispiel}{Beispiel}
 
+\newtheorem{*algorithmus}{Algorithmus}
+
 \theoremstyle{nonumberplain}
 \theoremheaderfont{\osfamily \bfseries \upshape}
 \theorembodyfont{\itshape}
