--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
@@ -32,7 +32,7 @@
 % additional packages
 %---------------------------------------
 
-% none
+\usepackage{csquotes}
 
 %---------------------------------------
 % general settings
@@ -109,5 +109,13 @@
 \input{optinum_4_0_intro}
 \input{optinum_4_1_spaltengenerierung}
 \input{optinum_4_2_methodeBranchBound}
+\input{optinum_4_3_dynamischeOptimierung}
+\input{optinum_4_4_schnittebenenverfahren}
+
+\chapter{Optimierung auf Graphen}
+\label{chapter_5_optimierungGraphen}
+\input{optinum_5_0_intro}
+\input{optinum_5_1_definitionen}
+\input{optinum_5_2_minimumSpanningTree}
 
 \end{document}
