--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
@@ -32,7 +32,7 @@
 % additional packages
 %---------------------------------------
 
-% none
+\usepackage{csquotes}
 
 %---------------------------------------
 % general settings
@@ -104,4 +104,13 @@
 \label{chapter_4_optimaleInvesition}
 \input{stochv_4_1_anlageproblem}
 \input{stochv_4_2_exkursOptimierung}
+\input{stochv_4_3_markowitzModelle}
+\input{stochv_4_4_capitalAssetPricingModel}
+\input{stochv_4_5_praeferenzordnungenErwartungsnutzen}
+
+\chapter{Risikomaße}
+\label{chapter_5_risikomasse}
+\input{stochv_5_0_einfuehrung}
+\input{stochv_5_1_value-at-risk}
+
 \end{document}
