STOCHV: lecture until 16 jan 2020 finished

--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
@@ -112,5 +112,6 @@
 \label{chapter_5_risikomasse}
 \input{stochv_5_0_einfuehrung}
 \input{stochv_5_1_value-at-risk}
-
+\input{stochv_5_2_expectedShortfall}
+\input{stochv_5_3_risikomasseAxiomatik}
 \end{document}
