STOCHV: lecture until 23 jan 2020 finished

--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
@@ -114,4 +114,5 @@
 \input{stochv_5_1_value-at-risk}
 \input{stochv_5_2_expectedShortfall}
 \input{stochv_5_3_risikomasseAxiomatik}
+\input{stochv_5_4_verteilteRisiken}
 \end{document}
