--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
@@ -117,5 +117,6 @@
 \input{optinum_5_0_intro}
 \input{optinum_5_1_definitionen}
 \input{optinum_5_2_minimumSpanningTree}
+\input{optinum_5_3_optimaleWege}
 
 \end{document}
